Closed Bug 800840 Opened 13 years ago Closed 13 years ago

startup crash in XREMain::XRE_mainStartup

Categories

(Toolkit :: Startup and Profile System, defect)

17 Branch
ARM
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla19
Tracking Status
firefox17 + fixed
firefox18 + fixed
fennec 17+ ---

People

(Reporter: scoobidiver, Assigned: wesj)

Details

(Keywords: crash, topcrash, Whiteboard: [native-crash][startupcrash])

Crash Data

Attachments

(1 file)

It's #2 top crasher in 17.0b1. Signature XREMain::XRE_mainStartup More Reports Search UUID 917d34c7-cd00-4bfb-9ff2-820052121012 Date Processed 2012-10-12 08:14:56 Uptime 1 Install Age 1.0 minutes since version was first installed. Install Time 2012-10-12 08:13:21 Product FennecAndroid Version 17.0 Build ID 20121010211745 Release Channel beta OS Linux OS Version 0.0.0 Linux 3.0.15-928452-user #1 SMP PREEMPT Tue Jul 31 19:37:49 KST 2012 armv7l Build Architecture arm Build Architecture Info Crash Reason SIGSEGV Crash Address 0x0 App Notes samsung GT-I9300 samsung/m0xx/m0:4.0.4/IMM76D/I9300XXBLH1:user/release-keys Processor Notes WARNING: JSON file missing Add-ons EMCheckCompatibility False Adapter Vendor ID Adapter Device ID Device samsung GT-I9300 Android API Version 15 (REL) Android CPU ABI armeabi-v7a Frame Module Signature Source 0 libxul.so XREMain::XRE_mainStartup toolkit/xre/nsAppRunner.cpp:3445 1 libxul.so XREMain::XRE_main toolkit/xre/nsAppRunner.cpp:3869 2 libxul.so XRE_main toolkit/xre/nsAppRunner.cpp:3963 3 libxul.so GeckoStart toolkit/xre/nsAndroidStartup.cpp:73 4 libmozglue.so Java_org_mozilla_gecko_GeckoAppShell_nativeRun APKOpen.cpp:983 5 libdvm.so libdvm.so@0x1ed72 6 dalvik-heap (deleted) dalvik-heap @0xdf44c6 7 libdvm.so libdvm.so@0x5902d 8 data@app@org.mozilla.firefox_beta-2.apk@classes.dex data@app@org.mozilla.firefox_beta-2.apk@classes.dex@0x141382 ... More reports at: https://crash-stats.mozilla.com/report/list?signature=XREMain%3A%3AXRE_mainStartup
Keywords: needURLs
Keywords: needURLs
Do we have any co-relations and do we see this on other any other channels ?
This appears to be a null mProfileLock, which basically means that http://hg.mozilla.org/releases/mozilla-beta/annotate/f02c5fb11741/toolkit/xre/nsAppRunner.cpp#l3430 succeeded but didn't return a profile lock. Does this have a nightly regression range?
(In reply to bhavana bajaj [:bajaj] from comment #1) > Do we have any co-relations and do we see this on other any other channels ? Crashes happen before any loaded extensions, on Froyo, Gingerbread, ICS and JB. Two Mac users were affected in 15.0.1. (In reply to Benjamin Smedberg [:bsmedberg] from comment #2) > Does this have a nightly regression range? No, because only Beta users and one Aurora user are affected.
Tracking for now and assigning to Benjamin - is it possible to hunt down a regression in Beta? If you're not the right person for this please reassign to another person but if we're going to track for 17 it needs to be assigned to someone.
Assignee: nobody → benjamin
I do not have time to look at this bug. I suspect it's something with the locked profile dialog which can't be shown on Android, but I'd like somebody from the mobile team to take it if necessary.
Assignee: benjamin → nobody
Alright - over to Brad then for a mobile team assessment of who can take this on.
Assignee: nobody → blassey.bugs
Flags: needinfo?(blassey.bugs)
Wes - Does this seem similar to the other bug you fixed related to locked profiles?
tracking-fennec: ? → 17+
Flags: needinfo?(blassey.bugs) → needinfo?(wjohnston)
Yes. I have a fix. testing it now
Flags: needinfo?(wjohnston)
Attached patch PatchSplinter Review
I'm not exactly sure how to reproduce this bug, but this should fix it.
Assignee: blassey.bugs → wjohnston
Attachment #672850 - Flags: review?(blassey.bugs)
Attachment #672850 - Flags: review?(blassey.bugs) → review+
Comment on attachment 672850 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 795053 User impact if declined: Crashes on startup. Subsequent starts should work Testing completed (on m-c, etc.): Landed on mc today Risk to taking this patch (and alternatives if risky): Medium because it gets hit during startup. This should be doing the same thing we would do in other cases where we unlock the profile for the user (i.e. a few lines above this patch). String or UUID changes made by this patch: None.
Attachment #672850 - Flags: approval-mozilla-beta?
Attachment #672850 - Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Attachment #672850 - Flags: approval-mozilla-beta?
Attachment #672850 - Flags: approval-mozilla-beta+
Attachment #672850 - Flags: approval-mozilla-aurora?
Attachment #672850 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: