Bug 800840 - Setup profile locker after unlocking on Android. r=bsmedberg, a=lsblakk