toolkit/xre/nsAppRunner.cpp
@@ -1766,8 +1766,10 @@ ProfileLockedDialog(nsIFile* aProfileDir, nsIFile* aProfileLocalDir,
       }
     } else {
 #ifdef MOZ_WIDGET_ANDROID
-      if (mozilla::AndroidBridge::Bridge()->UnlockProfile())
-        return NS_OK;
+      if (mozilla::AndroidBridge::Bridge()->UnlockProfile()) {
+        return NS_LockProfilePath(aProfileDir, aProfileLocalDir, 
+                                  nullptr, aResult);
+      }
 #else
       rv = ps->Alert(nullptr, killTitle, killMessage);
       NS_ENSURE_SUCCESS_LOG(rv, rv);
